@@ -1,3 +1,8 @@
+2017-01-03 Albert Chu <chu11@llnl.gov>
+
+	* common/toolcommon/pstdout.c (pstdout_hostnames_count): Slight
+	logic change to differentiate between bad input and out of memory.
+	
 2016-12-28 Albert Chu <chu11@llnl.gov>
 
 	* Globally support IPv6 address support in all tools as options,
